# kosenai_test

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  set-up-env.test.sh
.github/workflows/: django.yml
back_kosen_ai/: Dockerfile  pyproject.toml  requirements.txt
back_kosen_ai/docs/: openapi.yaml
back_kosen_ai/docs/paths/: contents.yaml  diagnosis.yaml  results.yaml
back_kosen_ai/docs/schemas/: Contents.yaml  Diagnosis.yaml  Error.yaml  Results.yaml  index.yaml
back_kosen_ai/src/: manage.py  pyproject.toml  pytest.ini
back_kosen_ai/src/kosen_ai_app/: admin.py  apps.py  fields.py  models.py  s3.py  serializers.py  urls.py  utils.py  views.py
back_kosen_ai/src/kosen_ai_app/fixtures/: test_data.json
back_kosen_ai/src/kosen_ai_app/test/: test_views.py
back_kosen_ai/src/pj_kosen_ai/: asgi.py  urls.py  wsgi.py
back_kosen_ai/src/pj_kosen_ai/settings/: .env.sample  settings.py
back_kosen_ai/src/test_data/: add_image.py  add_test_data.sh
